# evergreen

./: .gitignore  2  Cargo.toml  LICENSE  README.md  config.json  index.html  playlist.json  setup.sh  tree.json
pb_data/: data.db  logs.db  logs.db-shm  logs.db-wal
pb_migrations/: 1714382253_created_Animations.js  1714391642_updated_Animations.js  1715030121_created_Tree.js
src/: lib.rs  main.rs
src/config/: config.rs  mod.rs  serverconf.rs  treeconf.rs
src/db/: db.rs  db_item.rs  mod.rs  view_request.rs
src/log/: logger.rs
src/player/: animation.rs  mod.rs  playable.rs  playlist.rs
src/server/: server.rs
src/tcp/: command.rs  mod.rs  packet.rs
src/tree/: animation.rs  animator.rs  misc.rs  mod.rs  playlist.rs  tree.rs
src/web/: app.rs  mod.rs
src/web/components/: menu.rs  mod.rs
