[package]
name = "evergreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_json = "1.0"
rand = "0.8.5"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
