[package]
name = "evergreen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
colored = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
# rs_ws281x = "0.5.1"

lazy_static = "1.4.0"
